# selenium-forge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/selenium_forge/: __init__.py  forge.py
src/selenium_forge/cli/: __init__.py  main.py
src/selenium_forge/config/: __init__.py  defaults.py  loader.py  schema.py
src/selenium_forge/config/templates/: advanced.yaml  basic.yaml  firefox.yaml  headless.yaml  performance.yaml  stealth.yaml  testing.yaml
src/selenium_forge/core/: __init__.py  constants.py  platform.py  types.py
src/selenium_forge/core/exceptions/: __init__.py  base.py
src/selenium_forge/core/exceptions/config/: __init__.py  domains.py  generic.py
src/selenium_forge/drivers/: __init__.py  factory.py  manager.py
src/selenium_forge/exceptions/: __init__.py  base.py  utils.py
src/selenium_forge/proxy/: __init__.py  manager.py  rotator.py
src/selenium_forge/session/: __init__.py  context.py  manager.py
src/selenium_forge/stealth/: __init__.py  engine.py
src/selenium_forge/utils/: __init__.py  download.py  exceptions.py  filesystem.py  network.py
tests/: conftest.py
tests/unit/: test_base_exceptions.py  test_config_exceptions.py
tests/unit/test_exceptions/: conftest.py  test_base.py  test_utils.py
